--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <meta lang="pt-br">
-<title>Gabriel jogado</title>
+<meta charset="UTI-8"/>
 
-<h1 style="text-align: center;">Gabriel Rangel de Oliveira</h1>
+<h1 style="text-align: center;">Missão</h1>
 
-  <p> trabalho de front-end fesso Denis</p>
+  <p style="color: red;"><strong> fazer os camandos que o professor passou </strong></p>
+
+  <body>
+  <header>
+    <h2 style="text-align: left;"> Sou Um Aluno do CEEP</h2>
+    <p> estou no segundo ano do curso de desinvolvimento de sistemas</p>
+  </header>
+  <main> 
+ <h3 style="text-align: center;"> <strong>Minha meta é fazer esse trabalho </strong></h3>
+
+  </main>
+  </body>
+  
